# unicellar

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
examples/: gas_storage.py  lbr1.py  oil+gas_cap+aquifer.py  radial_aquifer.py  single-cells.py
examples/data/: lbr1_pressure_measurements.csv  lbr1_production.csv  lbr1_pvt.csv  test_pvt.inc
examples/test_e100_cases/: .gitignore
examples/test_e100_cases/gas_storage/: GAS_STORAGE.RSM  gas_storage.data
examples/test_e100_cases/oil+gas_cap+aquifer/: OGA.DATA  OGA.RSM
examples/test_e100_cases/radial_aquifer/: F_100GB.RSM  F_1GB.RSM  f_100gb.data  f_1gb.data
examples/test_e100_cases/single-cell/: SINGLE-CELL_PVCO.DATA  SINGLE-CELL_PVCO.RSM  SINGLE-CELL_PVTO.DATA  SINGLE-CELL_PVTO.RSM
src/: plotters.py
unicellar/: __init__.py  helpers.py  plotters.py  scrm.py
