[metadata]
name=unicellar
version=0.1.0
author=Alexey Khrulenko
author_email=a.khrulenko(kadabra)gmail.com
maintainer=Alexey Khrulenko
maintainer_email=alkh(kadabra)norceresearch.no
description=Python library to quickly set up and run single-cell reservoir models of CO2/H2 storages and petroleum fields
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/alex11818/unicellar
license = BSD-3-Clause
license_files=LICENSE.txt

[options]
packages = find:
zip_safe = False
include_package_data=True
install_requires =
    numpy
    scipy
    pandas  
    matplotlib
    plotly